[ADD] Add alien and position structs for managing these elements

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 name = "space-invaders"
 version = "0.1.0"
-authors = [ "Leonardo Nahra <leonardonahra@gmail.com>" ]
+authors = [ "Leonardo Nahra <leonardonahra@gmail.com>", "Arthur Adolfo <arthur_adolfo@hotmail.com>" ]
 
 [dependencies]
 
