--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ pistoncore-glutin_window = "0.46.0"
 piston2d-opengl_graphics = "0.53.0"
 piston_window = "0.79.0"
 find_folder = "0.3.0"
+rand = "0.4.2"
